Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -241,8 +241,8 @@
    },
    "outputs": [],
    "source": [
-    "'vandelay.com' # 'www.vandelay.com'\n",
-    "we"
+    "website = 'vandelay.com' # 'www.vandelay.com'\n",
+    "\n"
    ]
   },
   {
