--- a/index.ipynb
+++ b/index.ipynb
@@ -242,7 +242,7 @@
    "outputs": [],
    "source": [
     "website = 'vandelay.com' # 'www.vandelay.com'\n",
-    "website.prepend\n"
+    "website.prepend(\"www.\")\n"
    ]
   },
   {
