--- a/index.ipynb
+++ b/index.ipynb
@@ -253,7 +253,7 @@
    ],
    "source": [
     "website = 'vandelay.com' # 'www.vandelay.com'\n",
-    "\n"
+    "print()\"www.\"\n"
    ]
   },
   {
